# ClearCutCostumerClustering

./: .gitignore  README.md  pyproject.toml
code/ken/: EDA.ipynb
code/mra/: 01_eda_first_look.ipynb  02_clust_first_look.ipynb  03_cluster_kmeans.ipynb
code/mra/archive/: 01_eda_first_look.ipynb  02_clust_first_look.ipynb  03_cluster_kmeans.ipynb
data/02_inter/: Final project file.ipynb
resources/: REDI_Challenge_Description.md  Supermarket_Customer_Segmentation_Challenge.md  iFood_Challenge_Description.md
resources/from_course/: Clustering_part3_excercise_mra.ipynb
