[tool.poetry]
name = "clearcutcostumerclustering"
version = "0.1.0"
description = "REDI School ML/AI final project"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.2"
ipykernel = "^6.29.5"
numpy = "^2.1.3"
pandas = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
pyprojroot = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
